@@ -5,6 +5,7 @@
 - Fix double replace confirmation on OSX (Cocoa)
 - Remember in saved Aria files whether unused drums were hidden
 - Fix minor leak in CoreAudio player
+- Use fancy cursor on OSX when pressing Shift to select more
 
 1.3 beta 4
 - Added ability to drag-duplicate notes
